# backend/src/routes/postRoutes.js
@@ -9,6 +9,7 @@ const receiveImage = multer({ storage, limits: { fileSize: 10 * 1024 * 1024 } })
 
 router.post('/', postLimiter, optionalVerifyToken, receiveImage, postController.uploadImage);
 router.delete('/:id', postLimiter, optionalVerifyToken, postController.deletePost);
+router.get('/mine', verifyToken, postController.getMyPosts);
 router.get('/:id/likes', postController.getLikes);
 router.post('/:id/likes', verifyToken, postController.likePost);
 router.delete('/:id/likes', verifyToken, postController.unlikePost);
